Güncelleme işlemi tamamlandıktan sonra aşağıdaki komutlar ile değişikliklerinizi commit edebilirsiniz.

--- a/.env
+++ b/.env
@@ -7,3 +7,15 @@ DB_URL= "mongodb://localhost:27017/restoranlar"
 
 JWT_SECRET_KEY="DMs?sad89654QiqF"
 JWT_EXPIRES_IN="7d"
+
+# Trendyol
+TRENDYOL_API_KEY=""
+TRENDYOL_API_SECRET=""
+TRENDYOL_API="https://stageapi.trendyol.com/integration/oms/meal"
+
+# https://stageapi.trendyol.com/mealgw/suppliers/{supplierid}/packages
+#https://stageapi.trendyol.com/integration/oms/meal  
+
+# Migros
+MIGROS_API_SECRET_KEY="7w!z$C&F)J@NcRfUjXn2r5u8x/A?D*G-"
+MIGROS_API="test.gourmet.migrosonline.com/"
