--- a/.env
+++ b/.env
@@ -18,4 +18,4 @@ TRENDYOL_API="https://stageapi.trendyol.com/integration/oms/meal"
 
 # Migros
 MIGROS_API_SECRET_KEY="7w!z$C&F)J@NcRfUjXn2r5u8x/A?D*G-"
-MIGROS_API="test.gourmet.migrosonline.com/"
+MIGROS_API="https://test.gourmet.migrosonline.com"
