--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 PORT = 5000  
 
 # Database
-DB_URL= "mongodb://localhost:27017/restoranlar"
-
+# DB_URL= "mongodb://localhost:27017/restoranlar"  
+DB_URL= "mongodb://radmin:Radmin1234@16.16.124.99:27017/restoranlar"
 # JWT
 
 JWT_SECRET_KEY="DMs?sad89654QiqF"
@@ -24,3 +24,6 @@ MIGROS_API="https://gourmet.migrosonline.com"
 GETIR_API_SECRET_KEY="33486c772ff922469055cd10e931d89e88838b78"
 GETIR_API_RESTORANTKEY="9ded8b61fd674ab88987f727e758627b7f9d85ca"
 GETIR_API="https://food-external-api-gateway.development.getirapi.com"
+
+
+
